--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,178 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: white;
+}
+
+.Header {
+  width: 100%;
+  height: 10vh;
+  background-color: white;
+  padding-left: 2vw;
+}
+
+.Main {
+  width: 100%;
+  height: 90vh;
+  background-color: red;
+  display: flex;
+  flex-direction: row;
+}
+
+.Main-side {
+  width: 30vw;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+}
+
+.Main-content {
+  width: 70vw;
+  height: 100%;
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+
+.Card-container {
+  width: 20vw;
+  height: 31vw;
+  border-style: solid;
+  border-radius: 7px;
+  border-color: black;
+  border-width: 2;
+  display: flex;
+  box-shadow: 6px 6px 6px black;
+  background-color: white;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2vw;
+}
+
+.Card-img {
+  width: 18vw;
+  height: 18vw;
+  border-radius: 7px;
+  margin-top: 1vw;
+}
+
+.Card-text-container {
+  width: 18vw;
+  height: 8vw;
+  margin-top: 1vw;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.Card-name-price-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.Card-price-div {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-style: solid;
+  border-color: black;
+  border-width: 1;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 2vw;
+  font-weight: 700;
+  background-color: lightgreen;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  font-size: 1.7rem;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Card-weight {
+  margin: 0;
+}
+
+.Card-description-label {
+  margin: 0;
+  font-weight: 600;
+  display: inline;
+}
+
+.Card-heart-btn {
+  width: 17.5vw;
+  height: 5vw;
+  border-style: solid;
+  border-radius: 5px;
+  border-color: black;
+  border-width: 2;
+  margin-top: 0;
+  background-color: #cccccc;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  cursor: pointer;
+}
+
+.Card-heart-btn-txt {
+  color: black;
+  font-weight: 700;
+  user-select: none;
+}
+
+.Panel-container {
+  width: 20vw;
+  height: 30vw;
+  border-style: solid;
+  border-radius: 7px;
+  border-color: black;
+  border-width: 2;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 6px 6px 6px black;
+  background-color: white;
+  margin-top: 5vw;
+}
+
+.Panel-title {
+  color: black;
+  font-weight: 700;
+  align-self: center;
+  font-size: 28px;
+}
+
+.Panel-line {
+  width: 100%;
+  border-color: black;
+  border-style: solid;
+  border-width: .1;
+  opacity: .5;
+}
+
+.Panel-checkbox-row {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  align-self: center;
+  margin-top: .5vw;
+}
+
+.Panel-label {
+  font-weight: 700;
+  color: black;
+  font-size: 1.2rem;
+}
+
+.Panel-cost {
+  margin: 0;
+  font-weight: 700;
 }
